// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ HotSpotEditorModal/HotspotEditorTooltipTab Example using the HotspotStateHook 1`] = `
<div
  className="storybook-container"
>
  <div>
    <div
      className="iot--hotspot-editor-tooltip-tab"
    >
      <form
        className="iot--hotspot-editor--tooltip-form"
        data-testid="HotspotEditorTooltipTab"
        onSubmit={[Function]}
      >
        <div
          className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
        >
          <label
            className="bx--label"
            htmlFor="tooltip-form-title"
          >
            Title
          </label>
          <div
            className="bx--text-input__field-outer-wrapper"
          >
            <div
              className="bx--text-input__field-wrapper"
              data-invalid={null}
            >
              <input
                aria-describedby=""
                className="bx--text-input bx--text-input--light"
                data-testid="HotspotEditorTooltipTab-title-input"
                disabled={false}
                id="tooltip-form-title"
                name="title"
                onChange={[Function]}
                onClick={[Function]}
                placeholder="Enter title for the tooltip"
                title="Enter title for the tooltip"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="bx--form-item"
        >
          <label
            className="bx--label"
            htmlFor="tooltip-form-description"
          >
            Description
          </label>
          <div
            className="bx--text-area__wrapper"
            data-invalid={null}
          >
            <textarea
              aria-describedby={null}
              aria-invalid={null}
              className="bx--text-area bx--text-area--light"
              cols={50}
              disabled={false}
              id="tooltip-form-description"
              name="description"
              onChange={[Function]}
              onClick={[Function]}
              placeholder="Enter description for the tooltip"
              rows={4}
              value=""
            />
          </div>
        </div>
        <div
          className="iot--icon-color-container"
          style={
            Object {
              "--icon-fill-color": "currentcolor",
            }
          }
        >
          <div
            className="bx--dropdown__wrapper bx--list-box__wrapper"
            data-testid="dropdown"
          >
            <label
              className="bx--label"
              htmlFor="downshift-0-toggle-button"
              id="downshift-0-label"
            >
              Icon
            </label>
            <div
              className="bx--dropdown iot--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
              id="tooltip-form-icon"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <button
                aria-disabled={false}
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-labelledby="downshift-0-label downshift-0-toggle-button"
                className="bx--list-box__field"
                disabled={false}
                id="downshift-0-toggle-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                title="Select an icon"
                type="button"
              >
                <span
                  className="bx--list-box__label"
                >
                  Select an icon
                </span>
                <div
                  className="bx--list-box__menu-icon"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title />
                  </svg>
                </div>
              </button>
              <div
                aria-labelledby="downshift-0-label"
                className="bx--list-box__menu"
                id="downshift-0-menu"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                role="listbox"
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            className="bx--dropdown__wrapper bx--list-box__wrapper"
            data-testid="color-dropdown"
            title="Select a color"
          >
            <label
              className="bx--label"
              htmlFor="downshift-1-toggle-button"
              id="downshift-1-label"
            >
              Color
            </label>
            <div
              className="bx--dropdown iot--color-dropdown bx--dropdown--light bx--list-box bx--list-box--light"
              id="tooltip-form-color"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <button
                aria-disabled={false}
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-labelledby="downshift-1-label downshift-1-toggle-button"
                className="bx--list-box__field"
                disabled={false}
                id="downshift-1-toggle-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                title="Select a color"
                type="button"
              >
                <span
                  className="bx--list-box__label"
                >
                  Select a color
                </span>
                <div
                  className="bx--list-box__menu-icon"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title />
                  </svg>
                </div>
              </button>
              <div
                aria-labelledby="downshift-1-label"
                className="bx--list-box__menu"
                id="downshift-1-menu"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                role="listbox"
                tabIndex={-1}
              />
            </div>
          </div>
        </div>
      </form>
      <div
        className="iot--hotspot-editor-tooltip-tab__delete-button-container"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--ghost"
          data-testid="Button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Delete hotspot
          <svg
            aria-hidden="true"
            aria-label="Delete this hotspot"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={32}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12H14V24H12zM18 12H20V24H18z"
            />
            <path
              d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ HotSpotEditorModal/HotspotEditorTooltipTab Example with externaly managed state 1`] = `
<div
  className="storybook-container"
>
  <div>
    <div
      className="iot--hotspot-editor-tooltip-tab"
    >
      <form
        className="iot--hotspot-editor--tooltip-form"
        data-testid="HotspotEditorTooltipTab"
        onSubmit={[Function]}
      >
        <div
          className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
        >
          <label
            className="bx--label"
            htmlFor="tooltip-form-title"
          >
            Title
          </label>
          <div
            className="bx--text-input__field-outer-wrapper"
          >
            <div
              className="bx--text-input__field-wrapper"
              data-invalid={null}
            >
              <input
                aria-describedby=""
                className="bx--text-input bx--text-input--light"
                data-testid="HotspotEditorTooltipTab-title-input"
                disabled={false}
                id="tooltip-form-title"
                name="title"
                onChange={[Function]}
                onClick={[Function]}
                placeholder="Enter title for the tooltip"
                title="Enter title for the tooltip"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="bx--form-item"
        >
          <label
            className="bx--label"
            htmlFor="tooltip-form-description"
          >
            Description
          </label>
          <div
            className="bx--text-area__wrapper"
            data-invalid={null}
          >
            <textarea
              aria-describedby={null}
              aria-invalid={null}
              className="bx--text-area bx--text-area--light"
              cols={50}
              disabled={false}
              id="tooltip-form-description"
              name="description"
              onChange={[Function]}
              onClick={[Function]}
              placeholder="Enter description for the tooltip"
              rows={4}
              value=""
            />
          </div>
        </div>
        <div
          className="iot--icon-color-container"
          style={
            Object {
              "--icon-fill-color": "currentcolor",
            }
          }
        >
          <div
            className="bx--dropdown__wrapper bx--list-box__wrapper"
            data-testid="dropdown"
          >
            <label
              className="bx--label"
              htmlFor="downshift-0-toggle-button"
              id="downshift-0-label"
            >
              Icon
            </label>
            <div
              className="bx--dropdown iot--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
              id="tooltip-form-icon"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <button
                aria-disabled={false}
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-labelledby="downshift-0-label downshift-0-toggle-button"
                className="bx--list-box__field"
                disabled={false}
                id="downshift-0-toggle-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                title="Select an icon"
                type="button"
              >
                <span
                  className="bx--list-box__label"
                >
                  Select an icon
                </span>
                <div
                  className="bx--list-box__menu-icon"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title />
                  </svg>
                </div>
              </button>
              <div
                aria-labelledby="downshift-0-label"
                className="bx--list-box__menu"
                id="downshift-0-menu"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                role="listbox"
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            className="bx--dropdown__wrapper bx--list-box__wrapper"
            data-testid="color-dropdown"
            title="Select a color"
          >
            <label
              className="bx--label"
              htmlFor="downshift-1-toggle-button"
              id="downshift-1-label"
            >
              Color
            </label>
            <div
              className="bx--dropdown iot--color-dropdown bx--dropdown--light bx--list-box bx--list-box--light"
              id="tooltip-form-color"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <button
                aria-disabled={false}
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-labelledby="downshift-1-label downshift-1-toggle-button"
                className="bx--list-box__field"
                disabled={false}
                id="downshift-1-toggle-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                title="Select a color"
                type="button"
              >
                <span
                  className="bx--list-box__label"
                >
                  Select a color
                </span>
                <div
                  className="bx--list-box__menu-icon"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title />
                  </svg>
                </div>
              </button>
              <div
                aria-labelledby="downshift-1-label"
                className="bx--list-box__menu"
                id="downshift-1-menu"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                role="listbox"
                tabIndex={-1}
              />
            </div>
          </div>
        </div>
      </form>
      <div
        className="iot--hotspot-editor-tooltip-tab__delete-button-container"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--ghost"
          data-testid="Button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Delete hotspot
          <svg
            aria-hidden="true"
            aria-label="Delete this hotspot"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={32}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12H14V24H12zM18 12H20V24H18z"
            />
            <path
              d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ HotSpotEditorModal/HotspotEditorTooltipTab With Info Message 1`] = `
<div
  className="storybook-container"
>
  <div>
    <div
      className="iot--hotspot-editor-tooltip-tab"
    >
      <div
        className="iot--hotspot-editor--tooltip-info-message"
      >
        <svg
          aria-hidden={true}
          fill="currentColor"
          focusable="false"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,13.875H17.125v-8H13v2.25h1.875v5.75H12v2.25h8Z"
            data-icon-path="inner-path"
            fill="none"
          />
          <path
            d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,6a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,16.125H12v-2.25h2.875v-5.75H13v-2.25h4.125v8H20Z"
          />
        </svg>
        <p>
          Hold the CTRL key and click a position on the image to add a hotspot, or set the X and Y coordinates using dataitems and create hotspots at those positions.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 2 - Watson IoT Experimental/☢️ HotSpotEditorModal/HotspotEditorTooltipTab With Preset Values And Custom Colors 1`] = `
<div
  className="storybook-container"
>
  <div>
    <div
      className="iot--hotspot-editor-tooltip-tab"
    >
      <form
        className="iot--hotspot-editor--tooltip-form"
        data-testid="HotspotEditorTooltipTab"
        onSubmit={[Function]}
      >
        <div
          className="bx--form-item bx--text-input-wrapper bx--text-input-wrapper--light"
        >
          <label
            className="bx--label"
            htmlFor="tooltip-form-title"
          >
            Title
          </label>
          <div
            className="bx--text-input__field-outer-wrapper"
          >
            <div
              className="bx--text-input__field-wrapper"
              data-invalid={null}
            >
              <input
                aria-describedby=""
                className="bx--text-input bx--text-input--light"
                data-testid="HotspotEditorTooltipTab-title-input"
                disabled={false}
                id="tooltip-form-title"
                name="title"
                onChange={[Function]}
                onClick={[Function]}
                placeholder="Enter title for the tooltip"
                title="Enter title for the tooltip"
                type="text"
                value="West building"
              />
            </div>
          </div>
        </div>
        <div
          className="bx--form-item"
        >
          <label
            className="bx--label"
            htmlFor="tooltip-form-description"
          >
            Description
          </label>
          <div
            className="bx--text-area__wrapper"
            data-invalid={null}
          >
            <textarea
              aria-describedby={null}
              aria-invalid={null}
              className="bx--text-area bx--text-area--light"
              cols={50}
              disabled={false}
              id="tooltip-form-description"
              name="description"
              onChange={[Function]}
              onClick={[Function]}
              placeholder="Enter description for the tooltip"
              rows={4}
              value="This is the largest building there is"
            />
          </div>
        </div>
        <div
          className="iot--icon-color-container"
          style={
            Object {
              "--icon-fill-color": "#24a148",
            }
          }
        >
          <div
            className="bx--dropdown__wrapper bx--list-box__wrapper"
            data-testid="dropdown"
          >
            <label
              className="bx--label"
              htmlFor="downshift-0-toggle-button"
              id="downshift-0-label"
            >
              Icon
            </label>
            <div
              className="bx--dropdown iot--dropdown bx--dropdown--light bx--list-box bx--list-box--light"
              id="tooltip-form-icon"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <button
                aria-disabled={false}
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-labelledby="downshift-0-label downshift-0-toggle-button"
                className="bx--list-box__field"
                disabled={false}
                id="downshift-0-toggle-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                title={
                  <div
                    className="iot--dropdown__item"
                    title="Information square filled"
                  >
                    <div
                      className="iot--dropdown__label"
                    >
                      <ForwardRef(InformationSquareFilled24) />
                      <div
                        className="iot--dropdown__label__content"
                      >
                        Information square filled
                      </div>
                    </div>
                  </div>
                }
                type="button"
              >
                <span
                  className="bx--list-box__label"
                >
                  <div
                    className="iot--dropdown__item"
                    title="Information square filled"
                  >
                    <div
                      className="iot--dropdown__label"
                    >
                      <svg
                        aria-hidden={true}
                        fill="currentColor"
                        focusable="false"
                        height={24}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,13.875H17.125v-8H13v2.25h1.875v5.75H12v2.25h8Z"
                          data-icon-path="inner-path"
                          fill="none"
                        />
                        <path
                          d="M26,4H6A2,2,0,0,0,4,6V26a2,2,0,0,0,2,2H26a2,2,0,0,0,2-2V6A2,2,0,0,0,26,4ZM16,8a1.5,1.5,0,1,1-1.5,1.5A1.5,1.5,0,0,1,16,8Zm4,16.125H12v-2.25h2.875v-5.75H13v-2.25h4.125v8H20Z"
                        />
                      </svg>
                      <div
                        className="iot--dropdown__label__content"
                      >
                        Information square filled
                      </div>
                    </div>
                  </div>
                </span>
                <div
                  className="bx--list-box__menu-icon"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title />
                  </svg>
                </div>
              </button>
              <div
                aria-labelledby="downshift-0-label"
                className="bx--list-box__menu"
                id="downshift-0-menu"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                role="listbox"
                tabIndex={-1}
              />
            </div>
          </div>
          <div
            className="bx--dropdown__wrapper bx--list-box__wrapper"
            data-testid="color-dropdown"
            title="Select a color"
          >
            <label
              className="bx--label"
              htmlFor="downshift-1-toggle-button"
              id="downshift-1-label"
            >
              Color
            </label>
            <div
              className="bx--dropdown iot--color-dropdown bx--dropdown--light bx--list-box bx--list-box--light"
              id="tooltip-form-color"
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <button
                aria-disabled={false}
                aria-expanded={false}
                aria-haspopup="listbox"
                aria-labelledby="downshift-1-label downshift-1-toggle-button"
                className="bx--list-box__field"
                disabled={false}
                id="downshift-1-toggle-button"
                onClick={[Function]}
                onKeyDown={[Function]}
                title={
                  <div
                    className="iot--color-dropdown__item"
                    title="green"
                  >
                    <div
                      className="iot--color-dropdown__item-border"
                    >
                      <div
                        className="iot--color-dropdown__color-sample"
                        style={
                          Object {
                            "backgroundColor": "#24a148",
                          }
                        }
                        title="#24a148"
                      />
                      <div
                        className="iot--color-dropdown__color-name"
                      >
                        green
                      </div>
                    </div>
                  </div>
                }
                type="button"
              >
                <span
                  className="bx--list-box__label"
                >
                  <div
                    className="iot--color-dropdown__item"
                    title="green"
                  >
                    <div
                      className="iot--color-dropdown__item-border"
                    >
                      <div
                        className="iot--color-dropdown__color-sample"
                        style={
                          Object {
                            "backgroundColor": "#24a148",
                          }
                        }
                        title="#24a148"
                      />
                      <div
                        className="iot--color-dropdown__color-name"
                      >
                        green
                      </div>
                    </div>
                  </div>
                </span>
                <div
                  className="bx--list-box__menu-icon"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={16}
                    name="chevron--down"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 16 16"
                    width={16}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                    />
                    <title />
                  </svg>
                </div>
              </button>
              <div
                aria-labelledby="downshift-1-label"
                className="bx--list-box__menu"
                id="downshift-1-menu"
                onBlur={[Function]}
                onKeyDown={[Function]}
                onMouseLeave={[Function]}
                role="listbox"
                tabIndex={-1}
              />
            </div>
          </div>
        </div>
      </form>
      <div
        className="iot--hotspot-editor-tooltip-tab__delete-button-container"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--ghost"
          data-testid="Button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          Delete hotspot
          <svg
            aria-hidden="true"
            aria-label="Delete this hotspot"
            className="bx--btn__icon"
            fill="currentColor"
            focusable="false"
            height={32}
            preserveAspectRatio="xMidYMid meet"
            role="img"
            viewBox="0 0 32 32"
            width={32}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 12H14V24H12zM18 12H20V24H18z"
            />
            <path
              d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
